<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOn="@string/pref_shown"
        android:summaryOff="@string/pref_hidden"
        android:title="@string/pref_show_bass_label"/>

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_triangle_default"
        android:key="@string/pref_show_triangle_key"
        android:summaryOn="@string/pref_shown"
        android:summaryOff="@string/pref_hidden"
        android:title="@string/pref_show_triangle_label"/>

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_square_default"
        android:key="@string/pref_show_square_key"
        android:summaryOn="@string/pref_shown"
        android:summaryOff="@string/pref_hidden"
        android:title="@string/pref_show_square_label"/>

    <EditTextPreference
        android:defaultValue="@string/pref_size_default"
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_label"/>

    <ListPreference
        android:defaultValue="@string/pref_color_red_label"
        android:key="@string/pref_color_key"
        android:title="@string/pref_color_label"
        android:entries="@array/pref_color_options_labels"
        android:entryValues="@array/pref_color_options_values"/>



</PreferenceScreen>